--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
     "babel-preset-env": "1.5.2",
     "css-loader": "0.28.4",
     "live-server": "^1.2.0",
+    "node-sass": "4.5.3",
+    "normalize": "^0.3.1",
+    "normalize.css": "7.0.0",
     "react": "16.0.0",
     "react-dom": "16.0.0",
     "react-modal": "2.2.2",
+    "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
     "validator": "8.0.0",
     "webpack": "3.1.0",
