--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "indecision-app",
   "version": "1.0.0",
+  "homepage": "https://thadeuszlay.github.io/indecision-app/",
   "scripts": {
     "serve": "live-server public/",
     "build": "webpack",
-    "dev-server": "webpack-dev-server"
+    "dev-server": "webpack-dev-server",
+    "predeploy": "npm run build",
+    "deply": "gh-pages -d build"
   },
   "main": "index.js",
   "author": "ThinkPad",
@@ -16,6 +19,7 @@
     "babel-plugin-transform-class-properties": "6.24.1",
     "babel-preset-env": "1.5.2",
     "css-loader": "0.28.4",
+    "gh-pages": "^2.0.1",
     "live-server": "^1.2.0",
     "node-sass": "4.5.3",
     "normalize": "^0.3.1",
